--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,27 @@ services:
       - "5672:5672"
       - "15672:15672"
 
+  elasticsearch:
+    image: elasticsearch:7.9.2
+    ports:
+      - '9200:9200'
+    environment:
+      - discovery.type=single-node
+    
+  kibana:
+    image: kibana:7.9.2
+    ports:
+      - '5601:5601'
+
+
+  logstash:
+    image: logstash:7.9.2
+    ports:
+      - '5000:5000'
+    volumes:
+    - ./logstash/pipeline:/usr/share/logstash/pipeline
+
+
 
 networks:
   all:
