--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -13,8 +13,8 @@ input {
 output {
   elasticsearch {
     hosts => ["elasticsearch:9200"]
-    #user => "elastic"
-    #password => "<elastic password>"
+    user => "elastic"
+    password => "changeme"
   }
 }
 
