--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -2,7 +2,7 @@ input {
   rabbitmq {
     queue => "elk_log"
     host => "rabbit"
-    port => 15672
+    port => 5672
     user => "user"
     password => "user123"
     durable => true
@@ -13,8 +13,8 @@ input {
 output {
   elasticsearch {
     hosts => ["elasticsearch:9200"]
-    user => "elastic"
-    password => "changeme"
+    #user => "elastic"
+    #password => "changeme"
   }
 }
 
