--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -12,10 +12,13 @@ input {
 
 output {
   elasticsearch {
-    hosts => ["elasticsearch:9200"]
+    hosts => "elasticsearch:9200"
+    index => "test_elk"
     user => "elastic"
     password => "changeme"
+
   }
+  stdout{}
 }
 
 filter {
