--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -12,10 +12,10 @@ input {
 
 output {
   elasticsearch {
-    hosts => "elasticsearch:9200"
+    hosts => "http://localhost:9200"
     index => "test_elk"
-    user => "elastic"
-    password => "changeme"
+    #user => "elastic"
+    #password => "changeme"
 
   }
   stdout{}
