--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -2,7 +2,7 @@ input {
   rabbitmq {
     queue => "elk_log"
     host => "rabbit"
-    port => 5672
+    port => 15672
     user => "user"
     password => "user123"
     durable => true
@@ -11,14 +11,14 @@ input {
 
 
 output {
-  elasticsearch {
-    hosts => "http://localhost:9200"
-    index => "test_elk"
+    elasticsearch {
+        hosts => "elasticsearch:9200"
+        index => "test_elk"
     #user => "elastic"
     #password => "changeme"
 
-  }
-  stdout{}
+    }
+    stdout {}
 }
 
 filter {
