--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -2,7 +2,7 @@ input {
   rabbitmq {
     queue => "elk_log"
     host => "rabbit"
-    port => 5672
+    port => 15672
     user => "user"
     password => "user123"
     durable => true
@@ -12,10 +12,9 @@ input {
 
 output {
     elasticsearch {
-        hosts => "elasticsearch:9200"
-        index => "test_elk"
-    #user => "elastic"
-    #password => "changeme"
+        hosts => ["elasticsearch:9200"]
+        user => "elastic"
+        password => "changeme"
 
     }
     stdout {}
