--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -12,13 +12,12 @@ input {
 
 output {
     elasticsearch {
-        hosts => ["elasticsearch:9200"]
-        user => "elastic"
-        password => "changeme"
+        hosts => "elasticsearch:9200"
+        #user => "elastic"
+        #password => "changeme"
 
     }
-    stdout {}
-}
+    }
 
 filter {
   if [@metadata][rabbitmq_properties][timestamp] {
