--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,6 +1,6 @@
 input {
   rabbitmq {
-    queue => "elk_log"
+    queue => "rasa_core_events"
     host => "rabbit"
     port => 5672
     user => "user"
@@ -13,8 +13,8 @@ input {
 output {
     elasticsearch {
         hosts => ["elasticsearch:9200"]
-        #user => "elastic"
-        #password => "changeme"
+        user => "elastic"
+        password => "changeme"
 
     }
     }
